# capital-cipher-platform

./: .dockerignore  .gitignore  MIGRATION.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  validate.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pyproject.toml  turbo.json
backend/app/: __init__.py  main.py
backend/app/agents/: advanced_specialists.py  audit.py  base.py  evaluation.py  indicators.py  market_data.py  month10_specialists.py  month11_specialists.py  month8_specialists.py  month9_specialists.py  paper_trading.py  quant.py  registry.py  risk.py  runtime.py  specialists.py  trend.py
backend/app/api/: context.py  deps.py  security.py  websockets.py
backend/app/audit/: service.py
backend/app/backtesting/: acceptance.py  artifacts.py  engine.py  execution_data.py  fitting.py  walk_forward.py
backend/app/core/: config.py  errors.py  event_bus.py  journal.py  logging.py  outbox.py  payload_security.py  publication.py  state_machine.py
backend/app/database/: models.py  session.py
backend/app/execution/: __init__.py  credentials.py  precision.py
backend/app/market_data/: backfill.py  backfill_worker.py  catalog.py  clock.py  data_lake.py  data_quality.py  gaps.py  identity.py  store.py
backend/app/oms/: __init__.py  reconciliation.py  service.py
backend/app/operations/: __init__.py  load_testing.py  metrics.py  resilience.py  service.py  staging.py
backend/app/orchestrator/: decision_engine.py  portfolio_consensus.py  ranking.py  (+1 more)
backend/capital_cipher_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: report_recent_agent_cycles.py  run_month10_resilience.py  run_month11_shadow_validation.py  run_release_readiness_audit.py  run_staging_backend.py  run_staging_watchdog.py  smoke_binance_combined_stream.py  validate_staging_paper.py  validate_supabase_migrations.py
(+171 files in other folders)
